Fix layout issues in the upload page

--- a/Galleria/Content/Css/Site.less
+++ b/Galleria/Content/Css/Site.less
@@ -38,10 +38,11 @@ ul.btn-nav {
 #uploadContainer {
     text-align: center;
     vertical-align:middle;
-    width:100%;
-    line-height:1.25em;
-    font-size:1.5em;
-    height:20em;
+    min-height:20em;
+
+	ul.block-list {
+		margin-top:2em;
+	}
 }
 
 #uploadBox {   
@@ -49,8 +50,9 @@ ul.btn-nav {
     background-position:center; 
     border: 3px dashed rgba(255,255,255,0.4);
 	border-radius: 8px;
-    height:100%;
+    height:25em;
     width:100%;   
+	padding-bottom: -1.5em;
 }
 
 #uploadBox.over {
